tests/baselines/reference/nodeAllowJsPackageSelfName(module=nodenext).errors.txt
error TS2209: The project root is ambiguous, but is required to resolve export map entry '.' in file 'tests/cases/conformance/node/allowJs/package.json'. Supply the `rootDir` compiler option to disambiguate.
tests/cases/conformance/node/allowJs/index.cjs(2,23): error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("package")' call instead.


!!! error TS2209: The project root is ambiguous, but is required to resolve export map entry '.' in file 'tests/cases/conformance/node/allowJs/package.json'. Supply the `rootDir` compiler option to disambiguate.
==== tests/cases/conformance/node/allowJs/index.js (0 errors) ====
    // esm format file
    import * as self from "package";
    self;
==== tests/cases/conformance/node/allowJs/index.mjs (0 errors) ====
    // esm format file
    import * as self from "package";
    self;
==== tests/cases/conformance/node/allowJs/index.cjs (1 errors) ====
    // esm format file
    import * as self from "package";
                          ~~~~~~~~~
!!! error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("package")' call instead.
    self;
==== tests/cases/conformance/node/allowJs/package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module",
        "exports": "./index.js"
    }